--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                      <li> Our materials discovery project was featured in <a href="https://www.theglobeandmail.com/business/article-how-canadian-scientists-are-using-ai-as-a-creative-partner-in/"> The Globe and Mail.</a> </li>
              <li>  A <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient"> molecule search  </a> project for  health and climate solutions with Prof. <a href="https://yoshuabengio.org/profile/"> Yoshua Bengio </a> at Mila. </a>  (Also featured in <a href="https://sciencepolicy.ca/posts/collaborative-rd-key-to-addressing-challenges/">Canadian Science Policy Centre (GSPC) Magazine.</a>) </li>
          <li>   A <a href="https://nrc.canada.ca/en/stories/challenge-accepted-how-ai-collaborations-strengthen-discoveries"> molecule graph </a> representation and generation project with Prof. <a href="https://jian-tang.com/"> Jian Tang </a> at Mila.   </li>
-         <li>   Three papers on drug discovery recently accepted by high-impact journals: <a href="https://www.nature.com/natmachintell/"> Nature Machine Intelligence</a>, <a href="https://www.nature.com/ncomms/"> Nature Communications</a>, and <a href="https://www.pnas.org/"> PNAS</a>.   </li> 
+         <li>   Four papers on drug discovery recently accepted by high-impact journals: <a href="https://www.nature.com/natmachintell/"> Nature Machine Intelligence</a>, <a href="https://www.nature.com/ncomms/"> Nature Communications</a>, and <a href="https://www.pnas.org/"> PNAS</a>.   </li> 
           <li> Granted U.S. Patent 12,475,308 B2: <a href="https://patents.google.com/patent/US12475308B2">Vector Space Model for Form Data Extraction.</a> </li>
       </div>
 
@@ -174,6 +174,11 @@
       <!-- <h5> 2023</h5> -->
          <ul>
 
+<li style="margin-bottom: 20px;"><b> <span style="color: black;"> [AI for Drugs] </span>  Disentangled Autoencoding Equivariant Diffusion
+Model for Controlled Generation of 3D Molecules.  </b> <p class='content'>  Li, T., Liu, H., Guo, H., Gerstein, M., & Min, M. 
+  </p> <a  Nature Communications 2026</a> 
+</li>     
+           
 <li style="margin-bottom: 20px;"><b> <span style="color: black;"> [Machine Learning]</span> NeuralOS: Towards Simulating Operating Systems via Neural Generative Models. </b><p class='content'> Rivard, L., Sun, S.,  Sun, Guo, H., Chen, W., Deng, Y.</p><a href="https://openreview.net/pdf?id=TE2Vu7WJki"> ICLR 2026</a>,  <a href="https://neural-os.com/">  Live Demo </a></li>            
 <li style="margin-bottom: 20px;"><b> <span style="color: black;">[AI for Drugs] </span> RigidSSL: Rigidity-based Geometric Pretraining for Protein Generation. </b><p class='content'> Ni, Z., Li, Y., Qiu, Z., Schölkopf, B., Guo, H., Liu, W., Liu, S.</p><a href="https://openreview.net/pdf?id=YAWpZcXHnP"> ICLR 2026</a></li>                       
 <li style="margin-bottom: 20px;"><b> <span style="color: black;">[AI for Materials]</span> OBELiX: A Curated Dataset of Crystal Structures and Experimentally Measured Ionic Conductivities for Lithium Solid-State Electrolytes. </b><p class='content'> Félix, T., Haibeh, J., Sharma, D., Hendley, R., Sun, S., Tchagang, A., Su, J., Huberman, S., Bengio, Y., Guo, H., Hernández-García, A., Shin, H. </p><a href="https://arxiv.org/pdf/2502.14234"> Digital Discovery (Royal Society of Chemistry) 2025</a></li>         
