--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 <li style="margin-bottom: 20px;"><b> <span style="color: black;"> [AI for Drugs] </span>  Disentangled Autoencoding Equivariant Diffusion
 Model for Controlled Generation of 3D Molecules.  </b> <p class='content'>  Li, T., Liu, H., Guo, H., Gerstein, M., & Min, M. 
-  </p> <a  Nature Communications 2026</a> 
+  </p> <a  href=""> Nature Communications 2026</a> 
 </li>     
            
 <li style="margin-bottom: 20px;"><b> <span style="color: black;"> [Machine Learning]</span> NeuralOS: Towards Simulating Operating Systems via Neural Generative Models. </b><p class='content'> Rivard, L., Sun, S.,  Sun, Guo, H., Chen, W., Deng, Y.</p><a href="https://openreview.net/pdf?id=TE2Vu7WJki"> ICLR 2026</a>,  <a href="https://neural-os.com/">  Live Demo </a></li>            
