--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
           <h4 id="pub"> Recent Preprints </h4>
        <ul>
 
+<li style="margin-bottom: 20px;"><b> <span style="color: black;">[AI for Drugs]</span> GeneZip: Region-Aware Compression for Long Context DNA Modeling. </b><p class='content'> Jianan Zhao, Xixian Liu, Zhihao Zhan, Xinyu Yuan, Hongyu Guo, Jian Tang. </p><a href="https://arxiv.org/pdf/2602.17739v1">arXiv 2026</a> </li> 
 <li style="margin-bottom: 20px;"><b> <span style="color: black;">[AI for Materials]</span> Expert-Guided LLM Reasoning for Battery Discovery: From AI-Driven Hypothesis to Synthesis and Characterization. </b><p class='content'> Shengchao Liu, Hannan Xu, Yan Ai, Huanxin Li, Yoshua Bengio, Hongyu Guo. </p><a href="https://arxiv.org/pdf/2507.16110">arXiv 2025</a> </li>         
 <!--  <li style="margin-bottom: 20px;"><b> <span style="color: Maroon;"> [NLP]</span> Understanding Large Language Models’ Ability on Interdisciplinary Research. </b><p class='content'> Yuanhao Shen, Daniel Xavier de Sousa, Ricardo Marçal, Ali Asad, Hongyu Guo, Xiaodan Zhu. </p><a href="https://arxiv.org/pdf/2507.15736">arXiv 2025</a> </li>           -->          
 <li style="margin-bottom: 20px;"><b> <span style="color: black;">[AI for Materials]</span> LacMaterial: Large Language Models as Analogical Chemists for Materials Discovery. </b><p class='content'>  Hongyu Guo. </p><a href="https://arxiv.org/pdf/2510.22312">arXiv 2025</a></li>         
